# University-Timetabling-System

./: .gitmodules  CMakeLists.txt  Dockerfile  README.md  run.sh
include/: CMakeLists.txt  Course.cpp  Course.h  Instructor.cpp  Instructor.h  TimeSlot.cpp  TimeSlot.h  TimeSlotInstructorPair.h  TimetableComponent.cpp  TimetableComponent.h  University.cpp  University.h  UniversityTimetablingSystem.h
script/: build.sh
src/: Instructor.cpp  TimetableComponent.cpp  University.cpp  UniversityTimetablingSystem.cpp
test/: InitialState  TimetableTest.cpp  testState
